# CIB_Forecast

./: .gitignore  CIB_Forecast.code-workspace  README.md  requirements-demo.txt  requirements.txt  setup.sh
pipeline/: .gitignore  README.md  assign_macro_job.py  config.ini  features.py  inference.py  policy_job.py  pyproject.toml  run.sh  train.py  transformation_job.py
pipeline/dags/: dag_cib_forecast.py
pipeline/data/reference/: sector_macro_mapping.csv
pipeline/docs/: architecture.md  render_diagrams.py  scraping_plan.md
pipeline/hive/: account_policy.hql  bronze_calendar.hql  bronze_macro.hql  bronze_sector_macro_mapping.hql  bronze_transactions.hql  features_cib_forecast.hql  silver_account_macro_assignment.hql  silver_weekly_cashflow.hql
pipeline/notebooks/: README.md
pipeline/scripts/: airflow_env.sh  bootstrap_bronze.py  derive_policy_from_exports.py  ingest_bronze.py  init_hive.sh  load_reference_tables.py  local_smoke_test.py  scrape_macro_indicators.py  start_airflow.sh
pipeline/src/: __init__.py  account_categorization.py  category_policy_v7.py  features_pipeline.py  policy.py  sector_macro_mapping.py  transformation.py
pipeline/src/common/: __init__.py  table_loader.py  table_writer.py  utils.py
pipeline/src/datagen/: __init__.py  synthetic.py
pipeline/src/macro_scraper/: __init__.py  (+3 more)
pipeline/tests/: test_build_features.py  test_category_policy.py  test_derive_policy.py  test_macro_scraper.py  test_metrics.py  test_policy.py  test_regression_models.py  test_sector_macro_mapping.py  test_synthetic.py  test_transformation.py  test_utils.py
(+19 files in other folders)
